<resources>
    <string name="app_name">Droidalyzer</string>
    <string name="analog_label">Alcohol Sensor:</string>
    <string name="detected_label">Droidalyzer Status:</string>
    <string name="myLocationString">My Location</string>
    <string name="prefTitle">Droidalyzer Settings</string>
    <string name="breathalyzerStatusText">Droidalyzer Status:</string>
    <string name="character_default_value">1</string>
    <string name="dialogTitleVoice">Select Character</string>
    <string name="listSummaryVoice">The Voice of the Alcohol Detector</string>
    <string name="character">Select Character</string>
    <string name="selected_character">selected_character</string>
    <string name="menu_prefs_title">Settings</string>
    <string name="prefSummary">Droidalyzer Settings</string>
    <string name="menu_instructions_title">Setup Instructions</string>
    <string name="menu_socialmedia_title">Social Media Accounts</string>
    <string name="pref_tts_no_drinks">pref_tts_no_drinks</string>
    <string name="tts_no_drinks">You have not had anything to drink</string>
    <string name="pref_tts_few_drinks">pref_tts_few_drinks</string>
    <string name="tts_few_drinks">Just a few drinks, have another</string>
    <string name="pref_tts_buzzed">pref_tts_buzzed</string>
    <string name="tts_buzzed">Feeling a little tipsy are we?</string>
    <string name="pref_tts_drunk">pref_tts_drunk</string>
    <string name="tts_drunk">You are quite drunk!</string>
    <string name="pref_countdown">pref_countdown</string>
    <string name="countdown_duration">6</string>
    <string name="pref_min_baseline">pref_min_baseline</string>
    <string name="min_baseline">550</string>
    <string name="pref_max_value">pref_max_value</string>
    <string name="max_value">850</string>
    <string name="pref_friend_phone">pref_friend_phone</string>
    <string name="friend_phone">4085550100</string>
    <string name="pref_taxi_phone">pref_taxi_phone</string>
    <string name="taxi_phone">4082931234</string>
    <string name="pref_tweet_no_drinks">pref_tweet_no_drinks</string>
    <string name="tweet_no_drinks">Little to no alcohol detected</string>
    <string name="pref_tweet_few_drinks">pref_tweet_few_drinks</string>
    <string name="tweet_few_drinks">I am almost sober</string>
    <string name="pref_tweet_buzzed">pref_tweet_buzzed</string>
    <string name="tweet_buzzed">I am feeling tipsy</string>
    <string name="pref_tweet_drunk">pref_tweet_drunk</string>
    <string name="tweet_drunk">I am drunk!</string>
    <string name="pref_facebook_post">pref_facebook_post</string>
    <string name="pref_facebook_friends">pref_facebook_friends</string>
    <string name="callFriendButtonString">Call Designated Driver</string>
    <string name="findFriendButtonString">Find Friends</string>
    <string name="callTaxiButtonString">Call Taxi</string>
    <string name="TaxiMagicButtonString">Taxi Magic</string>
    <string name="whereamiButtonString">Where Am I?</string>
    <string name="facebookPostButtonString">Facebook Post</string>
    <string name="tweetButtonString">Tweet</string>
    <string name="cancelButtonString">Cancel</string>
    <string name="pref_debug">pref_debug</string>
    <string name="pref_taxi_sms">pref_taxi_sms</string>
    <string name="taxi_sms_default">862442</string>
    <string name="pref_shake_start">pref_shake_start</string>
    <string name="drinkometer">Drink-O-Meter</string>
    <string name="notConnectedLabel">Not Connected</string>
    <string name="FindPLacesButtonString">Nearby Places/Check In</string>
    <string name="cancelButtonVerbage">Cancel</string>
    <string name="taxiMagicBottomVerbage">Taxi Magic service available in US major cities only</string>
    <string name="taxiScreenLabelVerbage">Enter pick up address, you\&apos;ll then receive an SMS text confirmation shortly</string>
    <string name="getTaxiButtonVerbage">Send</string>
    <string name="taxiMagicImageDescription">Taxi Magic Logo</string>
    <string name="twitter_btn_post">Login Twitter</string>
    <string name="fb_btn_post">Login Facebook</string>
    <string name="btn_clear_credentialsVerbage">Logout Twitter</string>
    <string name="facebookLogoutButtonVerbage">Logout Facebook</string>
    <string name="fb_logged_out2">Facebook Status: Logged Out.\n\nNote: If you have the official Facebook app installed, the signed on user will be taken from that app. If you want to sign in as a different user from this app, you\&apos;ll need to first logout and login from the Facebook app.</string>
    <string name="twitter_logged_out2">Twitter Status: Logged Out</string>
    <string name="socialMediaLabel">Note: No alcohol detector Tweets or Facebook posts will happen automatically. After each alcohol detection result, you can choose to Tweet and/or Facebook Post the reading.</string>
    <string name="fbButtonVerbage">Post Message</string>
    <string name="fb_logged_in">Facebook Status: Logged In</string>
    <string name="fb_logged_out">Facebook Status: Logged Out\n\n
        You will be prompted to login after clicking Post Message</string>
    <string name="fb_label">This message will be posted to your Facebook account, you can edit it before posting.</string>
    <string name="fbCompleteString">Message Posted to Facebook</string>
    <string name="twitterButtonVerbage">Tweet</string>
    <string name="twitter_logged_in">Twitter Status: Logged In</string>
    <string name="twitter_logged_out">Twitter Status: Logged Out\n\n
        You will be prompted to login after clicking Tweet</string>
    <string name="twitter_label">This message will be Tweeted, you can edit it before posting.</string>
    <string name="twitterCompleteString">Message Tweeted</string>
   <string name="userAcceptanceString">"The Droidalyzer is NOT a professional Breathalyzer and is for novelty use only. \n\nDo not use this app to determine whether you should drive.\n\nPlease Drink Responsibly"</string>
   <string name="userAcceptanceStringTitle">Novelty Use Only</string>
   <string name="setupInstructionsString">1. Pair your phone to the bluetooth enabled alcohol detector which will show up as IOIO using code 4545 if your phone is Android 2.3.3 and above. \n\n
	       			2. If your phone is below 2.3.3, connect using a USB cable and also turn on USB Debugging from Settings --> Applications --> Development --> USB debugging.\n\n 
	       			3. This app is for entertainment purposes only. Do not use this app as a tool to determine whether you should operate a motor vehicle or equipment.\n\n
	       			4. While the alcohol detector does contain a real alcohol sensor, it does not output BAC and rather gives results at four levels of alcohol level detection granularity: no alcohol detected, almost sober, tipsy, and drunk.\n\n
	       			5. Wait at least 20 minutes after drinking, eating, or smoking before testing. Not observing this waiting period will cause inaccurate readings.\n\n6. Do not blow smoke, food, or liquids into the alcohol detector as this will damage the sensor.\n\nPlease drink responsibly. More info at http://droidalyzer.com.</string>
   <string name="setupInstructionsStringTitle">Setup Instructions</string>
   <string name="notFoundString">"If using Bluetooth, make sure you've Bluetooth paired to the device using code 4545.\n\nIf connecting with a USB cable, ensure USB Debugging is turned on from Settings --> Applications --> Development --> USB debugging"</string>
   <string name="notFoundStringTitle">Alcohol Detector Not Found</string>
   <string name="instructionsString">After tapping the beer icon to begin, breathe into the alcohol sensor as if you were fogging up a window or say "haaaaaaaaah". Do not touch the sensor with your lips.\n\nTap the character icon to select different voices as well as other settings.\n\nWait at least 20 minutes after drinking, eating , or smoking before testing.\n\nThis app is for entertainment purposes only. Please Drink Responsibly.</string>
   <string name="level1Result">No Alcohol Detected</string>
   <string name="level2Result">Almost Sober</string>
   <string name="level3Result">Feeling Tipsy?</string>
   <string name="level4Result">You\&apos;re Drunk!</string>
   <string name="menuTTSText">Enter Text to Speech based response</string>
   <string name="menuTaxiMagic">Taxi Magic SMS Number</string>
   <string name="menuTaxiMagicSummary">Taxi Magic service in US major cities only, http://taximagic.com</string>
   <string name="menuTaxiNumber">Taxi Phone Number</string>
   <string name="menuTaxiNumberSummary">Pre-stored phone number of your local taxi service</string>
   <string name="menuFriendPhone">Designated Driver</string>
   <string name="menuFriendPhoneSummary">Designated driver\&apos;s phone number</string>
   <string name="menuUserAcceptance">User Acceptance</string>
   <string name="menuUserAcceptanceSummary">Display user acceptance on startup</string>
   <string name="menuDisableSleep">Disable Sleep</string>
   <string name="menuDisableSleepSummary">Prevents phone from going to sleep just while this app is open</string>
   <string name="menuSimulationMode">Simulation Mode</string>
   <string name="menuSimulationModeSummary">Run without the alcohol detector hardware</string>
   <string name="menuCountdown">Countdown</string>
   <string name="menuCountdownSummary">How long the user should blow in seconds</string>
   <string name="menuCalibrationTitle">Alcohol Sensor Settings</string>
   <string name="menuDisplayData">Display Sensor Data</string>
   <string name="menuDisplayDataSummary">Display alcohol sensor raw data</string>
   <string name="menuMinimumBaseline">Minimum Baseline</string>
   <string name="menuMinimumBaselineSummary">Minimum low value for alcohol detector to be ready</string>
   <string name="menuHighRange">High Range</string>
   <string name="menuHighRangeSummary">Highest value of the alcohol sensor</string>
   <string name="menuDebug">Debug</string>
   <string name="menuDebugSummary">Displays debug data</string>
   <string name="menuTexttoSpeechTitle">Text to Speech Settings</string>
   <string name="menuSocialMediaTitle">Social Media Settings</string>
   <string name="menuSocialMediaTitleSummary">Tweeting or Facebook posting of alcohol detection results</string>
   <string name="menuTweetResults">Enable Tweets</string>
   <string name="menuTweetResultsSummary">You will be prompted for each Tweet, nothing will Tweet automatically. Uncheck to hide the Tweet button.</string>
   <string name="menuFacebookPosts">Enable Facebook Posts</string>
   <string name="menuFacebookPostsSummary">You will be prompted for each Facebook post, nothing will post automatically. Uncheck to hide the Facebook Post button.</string>
   <string name="menuLevel1Post">No Alcohol Post</string>
   <string name="menuLevel2Post">Almost Sober Post</string>
   <string name="menuLevel3Post">Tipsy Post</string>
   <string name="menuLevel4Post">Drunk Post</string>
   <string name="postTextSummary">Enter text for Tweet and Facebook posts</string>
    <string name="pref_hideTaximagicTitle">Hide Taxi Magic</string>
    <string name="pref_hideTaximagicSummary">Non US users may want to hide the Taxi Magic button</string>
    <string name="pref_facebook_post_default">true</string>
    <string name="pref_twitter_post_default">false</string>
    <string name="pref_disablesleep_default">true</string>
    <string name="pref_simulation_default">false</string>
    <string name="pref_show_user_acceptance_default">true</string>
    <string name="drunkDialButtonString">Random Drunk Dial</string>
    <string name="disableActions">Turn Off Pop Up</string>
    <string name="disableActionsSummary">Turn off the alcohol detection results pop up screen</string>
    <string name="bluetooth_pair">Blueooth Pairing</string>
    <string name="bluetooth_pairSummary">Shortcut to the Bluetooth settings screen. Pair to IOIO using code: 4545</string>
</resources>